# 3L14

./: .gitignore  3L14.sublime-workspace  Cargo.toml  README.md  RenderDoc.cap  build.rs  desktop.ini  rustfmt.toml
.github/workflows/: build_3L14.yml  rust.yml  test_3L14.yml
asset-3l14/: Cargo.toml
asset-3l14/src/: asset.rs  asset_types.rs  assets_storage.rs
assets/: cubes.glb  shapes.glb
assets/prebuilt/: DebugLines.ps.spv  DebugLines.vs.spv
assets/shaders/: Colors.hlsli  DebugLines.ps.hlsl  DebugLines.vs.hlsl  SimpleOpaque.ps.hlsl  SimpleOpaque.vs.hlsl  SkinnedOpaque.vs.hlsl  test.hlsl  test.wgsl
assets/shaders/math/: DualQuat.hlsli
assets/src/: cube.glb  cube.glb.sork  cubes.glb.sork  pawn.glb  pawn.glb.sork  shapes.glb.sork  test.latch  test.latch.sork  test.matl  test.matl.sork  test.png.sork  test.ps.hlsl  test.ps.hlsl.sork  test.vs.hlsl  test.vs.hlsl.sork
assets/src/shaders/: DebugLines.ps.hlsl  DebugLines.vs.hlsl  Lighting.hlsli  PbrOpaque.ps.hlsl  PbrOpaque.ps.hlsl.sork  Scene.hlsli  SkinnedOpaque.vs.hlsl  SkinnedOpaque.vs.hlsl.sork  StaticOpaque.vs.hlsl  StaticOpaque.vs.hlsl.sork  StaticShadow.vs.hlsl  StaticShadow.vs.hlsl.sork  test.wgsl
assets/symbols/: Signal.toml
benches/: hlists.rs
containers-3l14/: Cargo.toml
containers-3l14/src/: object_pool.rs
debug-3l14/: Cargo.toml
debug-3l14/src/: debug_gui.rs  debug_menu.rs
graphics-3l14/: Cargo.toml
graphics-3l14/src/: camera.rs  colors.rs  debug_draw.rs  pipeline_sorter.rs  windows.rs
graphics-3l14/src/assets/: geometry.rs  model.rs  shader.rs  texture.rs
input-3l14/: Cargo.toml
macros/: Cargo.toml  asset_derive.rs  fancy_enum.rs  flags_enum.rs  proc_macros.rs  type_layout_hash.rs
nab-3l14/: Cargo.toml
nab-3l14/src/: app.rs  lib.rs
nab-3l14/src/math/: frustum.rs  mod.rs  sphere.rs
nab-3l14/src/runtime/: scheduler.rs
nab-3l14/src/utils/: alloc_slice.rs  inline_hash.rs  mod.rs
src/: build_common.rs  dummy.rs  lib.rs  macro_tests.rs  main.rs
src/Engine/: app.rs  core_types.rs  globals.rs  math.rs  middleware.rs  mod.rs  state_logic.rs  utils.rs
src/Engine/assets/: assets.rs  material.rs  mod.rs  scratch.txt  shader.rs  texture.rs
src/Engine/graphics/: colors.rs  debug_gui.rs  material.rs  mod.rs  model.rs  render_passes.rs  renderer.rs  scene.rs  shader.rs  test_render_pipeline.rs
src/Engine/input/: mod.rs
src/Engine/math/: angles.rs  mod.rs
src/Engine/middlewares/: Input.rs  clock.rs  mod.rs  window.rs  window_input.rs  window_manager.rs  windows.rs
src/Engine/timing/: mod.rs
src/Engine/utils/: alloc_slice.rs  async_completion.rs  common_traits.rs  mod.rs
src/Engine/windows/: mod.rs
src/Engine/world/: camera.rs  transform.rs
src/asset_builder/: asset_builder.rs  main.rs
src/asset_builder/builders/: mod.rs  model_builder.rs
src/assets_builder/: asset_builder.rs  assets_builder.rs  main.rs
src/assets_builder/builders/: material_builder.rs  mod.rs  model_builder.rs  scene_builder.rs  shader_builder.rs  texture_builder.rs
src/assets_builder/core/: asset_builder.rs  asset_meta.rs  assets_builder.rs  inline_hash.rs  mod.rs  scan.rs
src/assets_builder/helpers/: mod.rs  shader_compiler.rs  texture_compressor.rs
src/blah/: state_logic.rs
src/engine/: core_types.rs  mod.rs
src/engine/asset_3l14/: Cargo.toml  asset.rs  asset_handle.rs  asset_key.rs  asset_lifecycler.rs  asset_load_list.rs  asset_meta.rs  asset_types.rs  assets_storage.rs  lib.rs  symbol.rs
src/engine/debug_3l14/: Cargo.toml  debug_gui.rs  debug_menu.rs  lib.rs  sparkline.rs
src/engine/graphics_3l14/: Cargo.toml  camera.rs  colors.rs  debug_draw.rs  dynamic_geo.rs  lib.rs  material_classes.rs  pipeline_cache.rs  pipeline_sorter.rs  render_passes.rs  renderer.rs  skeletal_animator.rs  skeleton_poser.rs  uniforms_pool.rs  vertex_layouts.rs  view.rs  windows.rs
src/engine/graphics_3l14/assets/: geometry.rs  material.rs  mod.rs  model.rs  shader.rs  skeletal_animation.rs  skeleton.rs  texture.rs
src/engine/graphics_3l14/passes/: mod.rs  shadow.rs
src/engine/input_3l14/: Cargo.toml  button.rs  controller.rs  input.rs  keyboard.rs  lib.rs  mouse.rs
src/engine/latch_3l14/: Cargo.toml  block_meta.rs  blocks.rs  circuit.rs  data_source.rs  graph.rs  impulses.rs  instance.rs  latches.rs  lib.rs  runtime.rs  states.rs  vars.rs
src/engine/math_3l14/: Cargo.toml  aabb.rs  angle.rs  angles.rs  basic_types.rs  dual_quat.rs  frustum.rs  geometry_tests.rs  lerp.rs  lib.rs  morton.rs  nquat48.rs  packed_transform.rs  plane.rs  ratio.rs  ray.rs  sphere.rs  transform.rs
src/engine/nab_3l14/: Cargo.toml  app.rs  core_types.rs  debugging.rs  enum_helpers.rs  hashing.rs  lib.rs  symbol.rs
src/engine/nab_3l14/math/: angles.rs  frustum.rs  geometry_tests.rs  plane.rs  sphere.rs  transform.rs
src/engine/nab_3l14/timing/: mod.rs  stopwatch.rs  time_primitives.rs
src/engine/nab_3l14/utils/: alloc_slice.rs  array.rs  async_completion.rs  bytes_traits.rs  enumflags2_seq.rs  mod.rs  varint.rs
src/engine/world_3l14/: Cargo.toml  lib.rs  scene.rs  static_geo.rs
src/exe/assets_browser_3l14/: Cargo.toml  main.rs
src/exe/assets_builder_3l14/: Cargo.toml  build.rs  main.rs
src/exe/assets_builder_3l14/builders/: circuit_builder.rs  mod.rs  model_builder.rs  scene_builder.rs  shader_builder.rs  texture_builder.rs
src/exe/assets_builder_3l14/core/: asset_builder.rs  assets_builder.rs  mod.rs  scan.rs  symbol_validator.rs
src/exe/assets_builder_3l14/helpers/: shader_compiler.rs  texture_compressor.rs
src/exe/game_3l14/: Cargo.toml  main.rs
src/exe/webshit_3l14/: Cargo.toml  lib.rs
src/exe/webshit_3l14/app/: app.css  app.html
src/exe_assets_browser/: main.rs
src/exe_assets_builder/: main.rs
src/exe_game/: main.rs
src/exe_tests/: lib.rs  macro_tests.rs
src/game/: assets.rs  main.rs
src/macros/: Cargo.toml  case_conv.rs  flags_enum.rs  has_derive.rs  proc_macros.rs  type_layout_hash.rs
src/macros/attribs/: asset.rs
src/macros/derives/: circuit_block.rs  circuit_block_meta.rs  fancy_enum.rs  flags_enum.rs  mod.rs  type_layout.rs  type_layout_hash.rs
world-3l14/: Cargo.toml
(+101 files in other folders)
