[package]
name = "package_3l14"
autobins = false
autotests = false
autobenches = false
autoexamples = false
edition.workspace = true
version.workspace = true
build = "./src/build_common.rs"

[lib]
path = "./src/dummy.rs"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
resolver = "2"
members = ["./src/engine/*", "src/exe/*", "src/build"]

[dependencies]

[workspace.dependencies]
build_3l14 = { path = "./src/build" }
proc_macros_3l14 = { path = "./src/macros" }

asset_3l14 = { path = "./src/engine/asset_3l14" }
containers_3l14 = { path = "./src/engine/containers_3l14" }
debug_3l14 = { path = "./src/engine/debug_3l14" }
graphics_3l14 = { path = "./src/engine/graphics_3l14" }
input_3l14 = { path = "./src/engine/input_3l14" }
latch_3l14 = { path = "./src/engine/latch_3l14" }
math_3l14 = { path = "./src/engine/math_3l14" }
nab_3l14 = { path = "./src/engine/nab_3l14" }
world_3l14 = { path = "./src/engine/world_3l14" }

game_3l14 = { path = "./src/exe/game_3l14" }
assets_builder_3l14 = { path = "./src/exe/assets_builder_3l14" }
assets_browser_3l14 = { path = "./src/exe/assets_browser_3l14" }

tests_3l14 = { path = "./src/exe/tests_3l14" }

#egui_wgpu_backend = "0.33.0"
#puffin = "0.19.1"
approx = "0.5.1"
arc-swap = { version = "1.7.1", features = ["weak"] }
arrayvec = { version = "0.7.6", features = ["serde", "std"] } # re-evaluate
base64 = "0.22.1"
bitcode = { version = "0.6.6", features = ["arrayvec", "glam", "std"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
colog = "1.3.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
directories = "6.0.0"
#egui = { version = "0.32.0", features = ["persistence"] }
egui = { git = "https://github.com/torokati44/egui", branch = "wgpu-26", features = ["persistence"] }
egui-wgpu = { git = "https://github.com/torokati44/egui", branch = "wgpu-26" }
futures = { version = "0.3.31", features = ["thread-pool"] }
glam = { version = "0.30.4", features = ["serde", "approx"] }
gltf = "1.4.1"
half = "2.6.0"
hassle-rs = "0.12.0"
image = "0.25.6"
indexmap = "2.10.0"
is-root = "0.1.3"
log = { version = "0.4.27", features = ["std", "kv", "max_level_debug"] }
metrohash = "1.0.7"
notify = "8.1.0"
notify-debouncer-full = "0.5.0"
parking_lot = "0.12.4"
paste ="1.0.15"
puffin = { git = "https://github.com/tedsteen/puffin", branch = "upgrade-egui" }
puffin_egui = { git = "https://github.com/tedsteen/puffin", branch = "upgrade-egui" }
puffin_http = "0.16.1"
rand = "0.9.1"
sdl2 = { version = "0.38.0", features = ["ttf", "raw-window-handle"] }
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.15.1"
toml = { version = "0.9.2", features = ["parse"] }
unicase = "2.8.1"
walkdir = "2.5.0"
wgpu = { version = "26.0.1", features = ["spirv"] }


# workspace dev-dependencies

# workspace build-dependencies
symlink = "0.1.0"
winres = "0.1.12"

[build-dependencies]
build_3l14.workspace = true
symlink.workspace = true
