[package]
name = "package_3l14"
autobins = false
autotests = false
autobenches = false
autoexamples = false
edition.workspace = true
version.workspace = true
build = "./src/build_common.rs"

[lib]
path = "./src/dummy.rs"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
resolver = "2"
members = ["./src/engine/*", "src/exe/*", "src/build"]

[dependencies]

[workspace.dependencies]
build_3l14 = { path = "./src/build" }
proc_macros_3l14 = { path = "./src/macros" }

asset_3l14 = { path = "./src/engine/asset_3l14" }
containers_3l14 = { path = "./src/engine/containers_3l14" }
debug_3l14 = { path = "./src/engine/debug_3l14" }
graphics_3l14 = { path = "./src/engine/graphics_3l14" }
input_3l14 = { path = "./src/engine/input_3l14" }
latch_3l14 = { path = "./src/engine/latch_3l14" }
math_3l14 = { path = "./src/engine/math_3l14" }
nab_3l14 = { path = "./src/engine/nab_3l14" }
world_3l14 = { path = "./src/engine/world_3l14" }

#egui_wgpu_backend = "0.33.0"
#puffin = "0.19.1"
approx = "0.5.1"
arc-swap = { version = "1.7.1", features = ["weak"] }
arrayvec = { version = "0.7.6", features = ["serde", "std"] } # re-evaluate
base64 = "0.22.1"
bitcode = { version = "0.6.7", features = ["arrayvec", "glam", "std"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
colog = "1.4.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dashmap = { version = "6.1.0" }
#egui = { version = "0.32.3", features = ["persistence"] }
#egui-wgpu = { version = "0.32.3" }
egui = { git = "https://github.com/torokati44/egui", branch = "wgpu-26", features = ["persistence"] }
egui-wgpu = { git = "https://github.com/torokati44/egui", branch = "wgpu-26" }
erased-serde = "0.4.9"
futures = { version = "0.3.31", features = ["thread-pool"] }
glam = { version = "0.30.9", features = ["serde", "approx"] }
gltf = "1.4.1"
half = "2.7.1"
hassle-rs = "0.12.0"
image = "0.25.8"
impls = "1.0.3"
indexmap = "2.12.0"
inventory = "0.3.21"
is-root = "0.1.3"
log = { version = "0.4.28", features = ["std", "kv", "max_level_debug"] }
logos = { version = "0.15.1", features = ["logos-derive"] }
metrohash = "1.0.7"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
parking_lot = "0.12.5"
paste ="1.0.15"
puffin = "0.19.1"
puffin_egui = "0.29.0"
puffin_http = "0.16.1"
rand = "0.9.2"
regex = "1.12.2"
sdl2 = { version = "0.38.0", features = ["ttf", "raw-window-handle"] }
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
toml = { version = "0.9.8", features = ["parse"] }
triomphe = { version = "0.1.15", features = ["arc-swap"] }
unicase = "2.8.1"
walkdir = "2.5.0"
wgpu = { version = "26.0.1", features = ["spirv"] }

# workspace dev-dependencies

# workspace build-dependencies
symlink = "0.1.0"
winres = "0.1.12"

[build-dependencies]
build_3l14.workspace = true
symlink.workspace = true
