[package]
name = "nab-3l14"
description = "Nuts & bolts"
workspace = ".."

edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
log.workspace = true
is-root.workspace = true
colog.workspace = true
metrohash.workspace = true
serde.workspace = true
parking_lot.workspace = true
approx.workspace = true
glam.workspace = true
bitcode.workspace = true