[package]
name = "proc_macros_3l14"
workspace = "../.."
edition.workspace = true

[lib]
name = "proc_macros_3l14"
path = "proc_macros.rs"
proc-macro = true

[dependencies]
syn = { version =  "2.0.108", features = ["extra-traits"] } # TODO: switch to unsynn?
quote = "1.0.41"
proc-macro2 = "1.0.103"
metrohash.workspace = true