[package]
name = "proc_macros_3l14"
workspace = "../.."
edition.workspace = true

[lib]
name = "proc_macros_3l14"
path = "proc_macros.rs"
proc-macro = true

[dependencies]
syn = { version =  "2.0.109", features = ["extra-traits"] } # TODO: switch to unsynn? ; extra-traits only for debugging
quote = "1.0.42"
proc-macro2 = "1.0.103"
metrohash.workspace = true