[package]
name = "asset_3l14"
description = "Assets management"
workspace = "../../.."
edition.workspace = true

[features]
debug_asset_lifetimes = []
asset_names = []
asset_debug_data = []

[lib]
path = "lib.rs"

[dependencies]
nab_3l14.workspace = true
debug_3l14.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
unicase.workspace = true
serde.workspace = true
metrohash.workspace = true
bitcode.workspace = true
rand.workspace = true
log.workspace = true
egui.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
puffin.workspace = true
array-init.workspace = true
futures.workspace = true