[package]
name = "asset_3l14"
description = "Assets management"
workspace = "../../.."
edition.workspace = true

[features]
debug_asset_lifetimes = []
asset_names = []
asset_debug_data = []
hot_reloading = ["dep:notify", "dep:notify-debouncer-full"]

[lib]
path = "lib.rs"

[dependencies]
nab_3l14.workspace = true
debug_3l14.workspace = true
proc_macros_3l14.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
unicase.workspace = true
serde.workspace = true
metrohash.workspace = true
bitcode.workspace = true
log.workspace = true
egui.workspace = true
puffin.workspace = true
futures.workspace = true
chrono.workspace = true
toml.workspace = true
base64.workspace = true

[target.'cfg(not(target_family="wasm"))'.dependencies]
rand.workspace = true
notify = { workspace = true, optional = true }
notify-debouncer-full = { workspace = true, optional = true }