[package]
name = "asset_3l14"
description = "Assets management"
workspace = "../../.."
edition.workspace = true

[features]
debug_asset_lifetimes = []
asset_names = []
asset_debug_data = []
hot_reloading = ["dep:notify", "dep:notify-debouncer-full"]

[lib]
path = "lib.rs"

[dependencies]
nab_3l14.workspace = true
debug_3l14.workspace = true
proc_macros_3l14.workspace = true

base64.workspace = true
bitcode.workspace = true
chrono.workspace = true
crossbeam.workspace = true
egui.workspace = true
enumflags2.workspace = true
futures.workspace = true
log.workspace = true
metrohash.workspace = true
parking_lot.workspace = true
puffin.workspace = true
serde.workspace = true
toml.workspace = true
triomphe.workspace = true
unicase.workspace = true

[target.'cfg(not(target_family="wasm"))'.dependencies]
rand.workspace = true
notify = { workspace = true, optional = true }
notify-debouncer-full = { workspace = true, optional = true }