[package]
name = "debug_3l14"
description = "Debugging/dev stuff"
workspace = "../../.."
edition.workspace = true

[features]
default = ["frame_profiler"]
frame_profiler = []

[lib]
path = "lib.rs"

[dependencies]
nab_3l14.workspace = true
egui.workspace = true
puffin_egui.workspace = true
serde.workspace = true
indexmap.workspace = true
log.workspace = true
toml.workspace = true