[package]
name = "graphics_3l14"
description = "Rendering/graphics"
workspace = "../../.."
edition.workspace = true

[features]
debug_gpu_labels = []
load_shaders_directly = [] # requires API support too

[lib]
path = "lib.rs"

[dependencies]
nab_3l14.workspace = true
math_3l14.workspace = true
asset_3l14.workspace = true
containers_3l14.workspace = true
debug_3l14.workspace = true
input_3l14.workspace = true # TODO: remove this dependency, needed by renderer::frame()
proc_macros_3l14.workspace = true
bitcode.workspace = true
egui.workspace = true
glam.workspace = true
arrayvec.workspace = true
wgpu.workspace = true
puffin.workspace = true
serde.workspace = true
metrohash.workspace = true
parking_lot.workspace = true
sdl2.workspace = true # TODO: Remove this dependency here
arc-swap.workspace = true
#egui_wgpu_backend.workspace = true
egui-wgpu.workspace = true
futures.workspace = true
log.workspace = true