[package]
name = "input_3l14"
description = "User input handling"
workspace = "../../.."
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
nab_3l14.workspace = true
debug_3l14.workspace = true
sdl2.workspace = true
egui.workspace = true
glam.workspace = true
puffin.workspace = true
log.workspace = true