[package]
name = "latch_3l14"
description = "Logic state machine"
workspace = "../../.."
edition.workspace = true

[lib]
path = "lib.rs"

[features]
action_history = []

[dependencies]
nab_3l14.workspace = true

crossbeam.workspace = true
dashmap.workspace = true
log.workspace = true
parking_lot.workspace = true
puffin.workspace = true
smallvec.workspace = true
