[package]
name = "latch_3l14"
description = "Logic state machine"
workspace = "../../.."
edition.workspace = true

[lib]
path = "lib.rs"

[features]
action_history = []

[dependencies]
asset_3l14.workspace = true
debug_3l14.workspace = true
nab_3l14.workspace = true
proc_macros_3l14.workspace = true

bitcode.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
erased-serde.workspace = true
impls.workspace = true
inventory.workspace = true
log.workspace = true
parking_lot.workspace = true
puffin.workspace = true
smallvec.workspace = true
triomphe.workspace = true
unicase.workspace = true
serde = { version = "1.0.228", features = ["derive"] }