[package]
name = "nab_3l14"
description = "Nuts & bolts"
workspace = "../../.."
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
proc_macros_3l14.workspace = true
chrono.workspace = true
clap.workspace = true
log.workspace = true
is-root.workspace = true
colog.workspace = true
metrohash.workspace = true
serde.workspace = true
parking_lot.workspace = true
approx.workspace = true
glam.workspace = true
bitcode.workspace = true
sdl2.workspace = true
directories.workspace = true