[package]
name = "world_3l14"
description = "World/scene abstractions"
workspace = "../../.."
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
nab_3l14.workspace = true
math_3l14.workspace = true
debug_3l14.workspace = true
asset_3l14.workspace = true
graphics_3l14.workspace = true
egui.workspace = true
glam.workspace = true