[package]
name = "assets_builder_3l14"
description = "3L14 assets builder"
workspace = "../../.."
edition.workspace = true
build = "build.rs"

[features]

[[bin]]
name = "assets_builder"
path = "main.rs"

[dependencies]
nab_3l14 = { workspace = true, features = [] }
asset_3l14 = { workspace = true, features = ["asset_names"] }
debug_3l14 = { workspace = true, features = [] }
graphics_3l14 = { workspace = true, features = ["debug_gpu_labels"] }
latch_3l14 = { workspace = true, features = [] }
math_3l14 = { workspace = true, features = [] }
proc_macros_3l14 = { workspace = true, features = [] }

arrayvec.workspace = true
bitcode.workspace = true
chrono.workspace = true
clap.workspace = true
erased-serde.workspace = true
enumflags2.workspace = true
glam.workspace = true
gltf.workspace = true
hassle-rs.workspace = true
indexmap.workspace = true
inventory.workspace = true
log.workspace = true
logos.workspace = true
metrohash.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
smallvec.workspace = true
toml.workspace = true
unicase.workspace = true
walkdir.workspace = true
wgpu.workspace = true

[build-dependencies]
build_3l14.workspace = true